k8s/apps/sloth-cloud-web/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sloth-cloud-web
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - cloud.lab.localhost
  rules:
    - backendRefs:
        - name: sloth-cloud-web
          port: 80
